# ttv

./: Dockerfile  LICENSE  Pipfile  README.md  pyproject.toml  setup.py
examples/: dramatic.md  euqlid_explanation.md  narration.md  radio.md
src/: main.py
src/editor/: editor.py
src/parser/: parser.py  script.py
ttv/: __init__.py  chapter.py  character.py  cli.py  command.py  editor.py  md.py  parse.py  scene.py  voicevox.py
